@@ -1408,7 +1408,11 @@ sprintf(buffer, "%s%.*s%s", prefix[process_options], MBUFTHIRD, pattern,
   suffix[process_options]);
 pattern_list[pattern_count] =
   pcre_compile(buffer, options, &error, &errptr, pcretables);
-if (pattern_list[pattern_count++] != NULL) return TRUE;
+if (pattern_list[pattern_count] != NULL) 
+  {
+  pattern_count++; 
+  return TRUE;
+  } 
 
 /* Handle compile errors */
 
@@ -1490,6 +1494,7 @@ int i, j;
 int rc = 1;
 int pcre_options = 0;
 int cmd_pattern_count = 0;
+int hint_count = 0;
 int errptr;
 BOOL only_one_at_top;
 char *patterns[MAX_PATTERN_COUNT];
@@ -1942,6 +1947,7 @@ for (j = 0; j < pattern_count; j++)
     fprintf(stderr, "pcregrep: Error while studying regex%s: %s\n", s, error);
     goto EXIT2;
     }
+  hint_count++;   
   }
 
 /* If there are include or exclude patterns, compile them. */
@@ -2001,7 +2007,7 @@ if (pattern_list != NULL)
   }
 if (hints_list != NULL)
   {
-  for (i = 0; i < pattern_count; i++) free(hints_list[i]);
+  for (i = 0; i < hint_count; i++) free(hints_list[i]);
   free(hints_list);
   }
 return rc;
